--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Barbearia Alura</title>
+        <style>
+            p{
+                text-align: center;
+            }
+        </style>
     </head>
  
     <body>
