--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Barbearia Alura</title>
-        <style>
-            p{
-                text-align: center;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
  
     <body>
