--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
  
     <body>
-    <h1 style="text-align: center; background: #CCCCCC;">Sobre a Barbearia Alura</h1>
+    <h1 style="text-align: center; background: #CCCCCC; color: blue;">Sobre a Barbearia Alura</h1>
 
     <p styele="text-align: center">Localizada no coração da cidade a Barbearia Alura traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
@@ -16,6 +16,6 @@
 
     <p style="text-align: center">Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 
-    </body>
+    </body> 
 
 </html>
